--- a/Exercice-Dom_2.html
+++ b/Exercice-Dom_2.html
@@ -9,10 +9,10 @@
     <section>
       <h1>Choisissez une couleur</h1>
       <div id="colorsContainer">
-        <div class="color choice" id="yellow"></div>
-        <div class="color choice" id="red"></div>
-        <div class="color choice" id="blue"></div>
-        <div class="color choice" id="green"></div>
+        <div class="color choice"></div>
+        <div class="color choice"></div>
+        <div class="color choice"></div>
+        <div class="color choice"></div>
       </div>
     </section>
 
