--- a/Exercice_positionnement_2.html
+++ b/Exercice_positionnement_2.html
@@ -35,7 +35,9 @@
             <h2>1</h2>
            </article>
          </div>
-         <div class="col-4 col-sm-12">
+         <div 
+         
+         class="col-4 col-sm-12">
            <article>
             <h2>2</h2>
            </article>
